2010-08-31  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        JSC TimeoutChecker::didTimeOut overflows on ARM
        https://bugs.webkit.org/show_bug.cgi?id=38538

        Make getCPUTime() return values relative to the first call.
        The previous implementation relied on simply on currentTime(), which
        return a time since epoch and not a time since the thread started. This
        made the return value of getCPUTime() overflow on 32 bits.

        * runtime/TimeoutChecker.cpp:
        (JSC::getCPUTime):

2010-08-30  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Adam Barth.

        HISTORY_ALWAYS_ASYNC should be removed (history should always be async)
        https://bugs.webkit.org/show_bug.cgi?id=44315

        Remove ENABLE_HISTORY_ALWAYS_ASYNC #define.

        * wtf/Platform.h: 

2010-08-30  Chris Rogers  <crogers@google.com>

        Reviewed by Kenneth Russell.

        Fix namespace for wtf/Complex.h and wtf/Vector3.h
        https://bugs.webkit.org/show_bug.cgi?id=44892

        * wtf/Complex.h:
        * wtf/Vector3.h:

2010-08-30  Andy Estes  <aestes@apple.com>

        Reviewed by Eric Carlson.

        Strings returned by asciiDebug() should be NULL-terminated.
        https://bugs.webkit.org/show_bug.cgi?id=44866

        * wtf/text/WTFString.cpp:
        (asciiDebug):

2010-08-30  Zoltan Herczeg  <zherczeg@webkit.org>

        Reviewed by Darin Adler.

        Refactor number parsing in the lexer
        https://bugs.webkit.org/show_bug.cgi?id=44104

        Number parsing was full of gotos, and needed a complete
        redesign to remove them (Only one remained). Furthermore
        integer arithmetic is empolyed for fast cases (= small
        integer numbers).

        * parser/Lexer.cpp:
        (JSC::Lexer::parseHex):
        (JSC::Lexer::parseOctal):
        (JSC::Lexer::parseDecimal):
        (JSC::Lexer::parseNumberAfterDecimalPoint):