@@ -1,3 +1,13 @@
+2010-08-31  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Reviewed by Darin Adler.
+
+        Modify ASSERT_UNUSED and UNUSED_PARAM similar to Qt's Q_UNUSED.
+        https://bugs.webkit.org/show_bug.cgi?id=44870
+
+        * wtf/Assertions.h:
+        * wtf/UnusedParam.h:
+
 2010-08-31  Benjamin Poulain  <benjamin.poulain@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
